[package]
name = "server_onchain"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
solana-sdk = "1.15.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bs58 = "0.4"